syntax = "proto3";

option go_package = "github.com/Applessr/hello-sekai-shop-tutorial";

message IsAvailableToSellReq {
    string playerId = 1;
    string itemId = 2;
}

message IsAvailableToSellRes {
    bool isAvailable = 1;
}

// Methods
service InventoryGrpcService {
    rpc IsAvailableToSell(IsAvailableToSellReq) returns (IsAvailableToSellRes);
}