syntax = "proto3";

option go_package = "github.com/Applessr/hello-sekai-shop-tutorial";

message FindItemInIdsReq {
    repeated string ids = 1;
}

message FindItemInIdsRes {
    repeated Item items = 1;
}

message Item {
    string id = 1;
    string title = 2;
    double price = 3;
    string imageUrl = 4;
    int32 damage = 5;
}

// Methods
service itemGrpcService {
  rpc FindItemInIds(FindItemInIdsReq) returns (FindItemInIdsRes);
}